# gauss-seidel

./: .gitignore  CMakeLists.txt  README.md  image.py  test.sh
source/: CMakeLists.txt  GS.cpp  GS.hpp  main.cpp
source/MatLab/: PoissonGS.m
